--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,8 +1,4 @@
-<html>
-<head>
-    <title>{{ title }}</title>
-</head>
-<body>
+{% extends "base.html" %}
+{% block content %}
 <h1>{{ title }}</h1>
-</body>
-</html>
+{% endblock %}
