--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,4 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
-<h1>{{ title }}</h1>
+    <div class="container">
+        <h1>{{ title }}</h1>
+    </div>
 {% endblock %}
