--- a/bioboxgui/templates/index.html
+++ b/bioboxgui/templates/index.html
@@ -2,11 +2,14 @@
 <head>
     <link data-require="bootstrap-css@3.1.1" data-semver="3.1.1" rel="stylesheet"
           href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css"/>
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}"/>
     <script data-require="angular.js@*" data-semver="1.2.14" src="http://code.angularjs.org/1.2.14/angular.js"></script>
     <script data-require="angular-resource@*" data-semver="1.2.13"
             src="http://code.angularjs.org/1.2.13/angular-resource.js"></script>
     <script src="{{ url_for('static', filename='controllers.js') }}"></script>
     <script src="{{ url_for('static', filename='services.js') }}"></script>
+
+    <title>Biobox GUI</title>
 </head>
 <body>
 <div class="container" ng-controller="BioboxController as main">
@@ -15,39 +18,135 @@
         <h3>Welcome!</h3>
         Please have a look around.
     </div>
-    <h2>Interfaces</h2>
-    {% raw %}
-    <select ng-init="selectedInterface = main.getInterface(null)" ng-model="selectedInterface" class="form-control"
-            ng-change="main.getInterface(selectedInterface)"
-            ng-options="interface.name for interface in main.interfaces">
-        <option value="">
-            Select an interface
-        </option>
-    </select>
-    {% endraw %}
-    <h2>Bioboxes</h2>
-    <div id="results">
-        <div ng-hide="!main.bioboxes.length">
-            <table class="table table-striped">
-                <thead>
-                <tr>
-                    <th>Title</th>
-                    <th>Description</th>
-                </tr>
-                </thead>
-                <tbody>
-                <tr ng-repeat="biobox in main.bioboxes">
-                    {% raw %}
-                    <td ng-show="biobox.title"><b>{{ biobox.title }}</b></td>
-                    <td ng-show="biobox.description">{{ biobox.description }}</td>
-                    {% endraw %}
-                </tr>
-                </tbody>
-            </table>
+    <div class="row">
+        <div class="col-xs-6">
+            <h2>Interfaces</h2>
+            <select ng-init="selectedInterface = main.getInterface(null)" ng-model="selectedInterface"
+                    class="form-control"
+                    ng-change="main.getInterface(selectedInterface)"
+                    ng-options="interface.name for interface in main.interfaces">
+                <option value="">
+                    Select an interface
+                </option>
+            </select>
+            <h2>Bioboxes</h2>
+            <div id="results" class="scroller">
+                <div ng-hide="!main.bioboxes.length">
+                    <table class="table table-striped table-hover clickable">
+                        <thead>
+                        <tr>
+                            <th>Title</th>
+                            <th>Description</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <tr ng-repeat="biobox in main.bioboxes" ng-click="main.selectBiobox(biobox)">
+                            {% raw %}
+                            <td ng-show="biobox.title"><b>{{ biobox.title }}</b></td>
+                            <td ng-show="biobox.description">{{ biobox.description }}</td>
+                            {% endraw %}
+                        </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+            <form role="form" ng-submit="main.updateBioboxes()">
+                <button type="submit" class="btn btn-default">update</button>
+            </form>
         </div>
-        <form role="form" ng-submit="main.updateBioboxes()">
-            <button type="submit" class="btn btn-default">update</button>
-        </form>
+        <div class="col-xs-6" ng-hide="!main.biobox">
+            {% raw %}
+            <div id="bioboxes-{{ main.biobox.title }}">
+                <h3> {{ main.biobox.image.dockerhub }} </h3>
+                <p> {{ main.biobox.description }}</p>
+                <table class="table">
+                    <tbody>
+                    <tr>
+                        <td>
+                            <span aria-hidden="true" class="glyphicon glyphicon-envelope"></span>
+                        </td>
+                        <td>
+                            <a ng-href="https://registry.hub.docker.com/u/{{ main.biobox.image.dockerhub }}">
+                                Docker Image
+                            </a>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <span class="glyphicon glyphicon-file"></span>
+                        </td>
+                        <td>
+                            <a ng-href="https://www.ncbi.nlm.nih.gov/pubmed/{{ main.biobox.pmid }}">
+                                Pubmed Entry
+                            </a>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <span ng-hide="!main.biobox.homepage"
+                                  class="glyphicon glyphicon-ok biobox-item-good"></span>
+                            <span ng-hide="main.biobox.homepage"
+                                  class="glyphicon glyphicon-remove biobox-item-bad"></span>
+                        </td>
+                        <td>
+                            <a ng-hide="!main.biobox.homepage" ng-href="{{ main.biobox.homepage }}">
+                                Homepage
+                            </a>
+                            <div ng-hide="main.biobox.homepage">
+                                No homepage available
+                            </div>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <span ng-hide="!main.biobox.image.source"
+                                  class="glyphicon glyphicon-ok biobox-item-good"></span>
+                            <span ng-hide="main.biobox.image.source"
+                                  class="glyphicon glyphicon-remove biobox-item-bad"></span>
+                        </td>
+                        <td>
+                            <a ng-hide="!main.biobox.image.source" ng-href="{{ main.biobox.image.source }}">
+                                Source Code Repository
+                            </a>
+                            <div ng-hide="main.biobox.image.source">
+                                No source code repository available
+                            </div>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <span ng-hide="!main.biobox.mailing_list"
+                                  class="glyphicon glyphicon-ok biobox-item-good"></span>
+                            <span ng-hide="main.biobox.mailing_list"
+                                  class="glyphicon glyphicon-remove biobox-item-bad"></span>
+                        </td>
+                        <td>
+                            <a ng-hide="!main.biobox.mailing_list" ng-href="{{ main.biobox.mailing_list }}">
+                                Mailing List
+                            </a>
+                            <div ng-hide="main.biobox.mailing_list">
+                                No mailing list available
+                            </div>
+                        </td>
+                    </tr>
+                    </tbody>
+                </table>
+                <h4>Tasks</h4>
+                <table class="table table-striped">
+                    <tbody>
+                    <tr ng-repeat="task in main.biobox.tasks">
+                        <td>
+                            <b>{{ task.name }}</b>
+                        </td>
+                        <td>
+                            {{ task.interface }}
+                        </td>
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
+            {% endraw %}
+        </div>
     </div>
 </div>
 </body>
