switch to flask_migrate for databse handling.

--- a/bioboxgui/templates/index.html
+++ b/bioboxgui/templates/index.html
@@ -30,8 +30,8 @@
                 </option>
             </select>
             <h2>Bioboxes</h2>
-            <div id="results" class="scroller">
-                <div ng-hide="!main.bioboxes.length">
+            <div ng-hide="!main.bioboxes.length" id="results" class="scroller">
+                <div>
                     <table class="table table-striped table-hover clickable">
                         <thead>
                         <tr>
