--- a/bioboxgui/templates/index.html
+++ b/bioboxgui/templates/index.html
@@ -54,105 +54,108 @@
                 <button type="submit" class="btn btn-default">update</button>
             </form>
         </div>
-        <div class="col-xs-6" ng_hide="main.biobox || main.biobox == 'fail'">
-            <h2>Hello there!</h2>
-            <p>Please select a Biobox from the left table. Can't see any? Hit the update button!</p>
-        </div>
-        <div class="col-xs-6" ng-hide="!main.biobox || main.biobox == 'fail'">
-            {% raw %}
-            <div id="bioboxes-{{ main.biobox.title }}">
-                <h3> {{ main.biobox.image.dockerhub }} </h3>
-                <p> {{ main.biobox.description }}</p>
-                <table class="table">
-                    <tbody>
-                    <tr>
-                        <td>
-                            <span aria-hidden="true" class="glyphicon glyphicon-envelope"></span>
-                        </td>
-                        <td>
-                            <a ng-href="https://registry.hub.docker.com/u/{{ main.biobox.image.dockerhub }}">
-                                Docker Image
-                            </a>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
-                            <span class="glyphicon glyphicon-file"></span>
-                        </td>
-                        <td>
-                            <a ng-href="https://www.ncbi.nlm.nih.gov/pubmed/{{ main.biobox.pmid }}">
-                                Pubmed Entry
-                            </a>
-                        </td>
-                    </tr>
-                    <tr ng-hide="!main.biobox.homepage">
-                        <td>
-                            <span class="glyphicon glyphicon-ok biobox-item-good"></span>
-                        </td>
-                        <td>
-                            <a ng-href="{{ main.biobox.homepage }}">
-                                Homepage
-                            </a>
-                        </td>
-                    </tr>
-                    <tr ng-hide="main.biobox.homepage">
-                        <td>
-                            <span class="glyphicon glyphicon-remove biobox-item-bad"></span>
-                        </td>
-                        <td> No homepage available</td>
-                    </tr>
-                    <tr ng-hide="!main.biobox.image.source">
-                        <td>
-                            <span class="glyphicon glyphicon-ok biobox-item-good"></span>
-                        </td>
-                        <td>
-                            <a ng-href="{{ main.biobox.image.source }}">
-                                Source Code Repository
-                        </td>
-                    </tr>
-                    <tr ng-hide="main.biobox.image.source">
-                        <td>
-                            <span class="glyphicon glyphicon-remove biobox-item-bad"></span>
-                        </td>
-                        <td> No source code repository available</td>
-                    </tr>
-                    <tr ng-hide="!main.biobox.mailing_list">
-                        <td>
-                            <span class="glyphicon glyphicon-ok biobox-item-good"></span>
-                        </td>
-                        <td>
-                            <a ng-href="{{ main.biobox.mailing_list }}">
-                                Mailing List
-                            </a>
-                        </td>
-                    </tr>
-                    <tr ng-hide="main.biobox.mailing_list">
-                        <td>
-                            <span class="glyphicon glyphicon-remove biobox-item-bad"></span>
-                        </td>
-                        <td> No mailing list available</td>
-                    </tr>
-                    </tbody>
-                </table>
-                <h4>Tasks</h4>
-                <table class="table table-striped">
-                    <tbody>
-                    <tr ng-repeat="task in main.biobox.tasks">
-                        <td>
-                            <b>{{ task.name }}</b>
-                        </td>
-                        <td>
-                            {{ task.interface }}
-                        </td>
-                    </tr>
-                    </tbody>
-                </table>
+        <div class="col-xs-6">
+            <div ng_hide="main.biobox || main.biobox == 'fail'">
+                <h2>Hello there!</h2>
+                <p>Please select a Biobox from the left table. Can't see any? Hit the update button!</p>
             </div>
-            {% endraw %}
-        </div>
-        <div class="col-xs-6" ng-hide="main.biobox != 'fail'">
-            <h2>Error</h2>
-            <p>You requested Biobox could not be delivered.</p>
+            <div ng-hide="!main.biobox || main.biobox == 'fail'">
+                {% raw %}
+                <div id="bioboxes-{{ main.biobox.title }}">
+                    <h3> {{ main.biobox.image.dockerhub }} </h3>
+                    <p> {{ main.biobox.description }}</p>
+                    <table class="table">
+                        <tbody>
+                        <tr>
+                            <td>
+                                <span aria-hidden="true" class="glyphicon glyphicon-envelope"></span>
+                            </td>
+                            <td>
+                                <a ng-href="https://registry.hub.docker.com/u/{{ main.biobox.image.dockerhub }}">
+                                    Docker Image
+                                </a>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <span class="glyphicon glyphicon-file"></span>
+                            </td>
+                            <td>
+                                <a ng-href="https://www.ncbi.nlm.nih.gov/pubmed/{{ main.biobox.pmid }}">
+                                    Pubmed Entry
+                                </a>
+                            </td>
+                        </tr>
+                        <tr ng-hide="!main.biobox.homepage">
+                            <td>
+                                <span class="glyphicon glyphicon-ok biobox-item-good"></span>
+                            </td>
+                            <td>
+                                <a ng-href="{{ main.biobox.homepage }}">
+                                    Homepage
+                                </a>
+                            </td>
+                        </tr>
+                        <tr ng-hide="main.biobox.homepage">
+                            <td>
+                                <span class="glyphicon glyphicon-remove biobox-item-bad"></span>
+                            </td>
+                            <td> No homepage available</td>
+                        </tr>
+                        <tr ng-hide="!main.biobox.image.source">
+                            <td>
+                                <span class="glyphicon glyphicon-ok biobox-item-good"></span>
+                            </td>
+                            <td>
+                                <a ng-href="{{ main.biobox.image.source }}">
+                                    Source Code Repository
+                                </a>
+                            </td>
+                        </tr>
+                        <tr ng-hide="main.biobox.image.source">
+                            <td>
+                                <span class="glyphicon glyphicon-remove biobox-item-bad"></span>
+                            </td>
+                            <td> No source code repository available</td>
+                        </tr>
+                        <tr ng-hide="!main.biobox.mailing_list">
+                            <td>
+                                <span class="glyphicon glyphicon-ok biobox-item-good"></span>
+                            </td>
+                            <td>
+                                <a ng-href="{{ main.biobox.mailing_list }}">
+                                    Mailing List
+                                </a>
+                            </td>
+                        </tr>
+                        <tr ng-hide="main.biobox.mailing_list">
+                            <td>
+                                <span class="glyphicon glyphicon-remove biobox-item-bad"></span>
+                            </td>
+                            <td> No mailing list available</td>
+                        </tr>
+                        </tbody>
+                    </table>
+                    <h4>Tasks</h4>
+                    <table class="table table-striped">
+                        <tbody>
+                        <tr ng-repeat="task in main.biobox.tasks">
+                            <td>
+                                <b>{{ task.name }}</b>
+                            </td>
+                            <td>
+                                {{ task.interface }}
+                            </td>
+                        </tr>
+                        </tbody>
+                    </table>
+                </div>
+                {% endraw %}
+            </div>
+            <div ng-hide="main.biobox != 'fail'">
+                <h2>Error</h2>
+                <p>You requested Biobox could not be delivered.</p>
+            </div>
         </div>
     </div>
 </div>
