--- a/bioboxgui/templates/index.html
+++ b/bioboxgui/templates/index.html
@@ -19,7 +19,7 @@
         Please have a look around.
     </div>
     <div class="row">
-        <div class="col-xs-6">
+        <div class="col-xs-3">
             <h2>Interfaces</h2>
             <select ng-init="selectedInterface = main.getInterface(null)" ng-model="selectedInterface"
                     class="form-control"
@@ -33,17 +33,10 @@
             <div ng-hide="!main.bioboxes.length" id="results" class="scroller">
                 <div>
                     <table class="table table-striped table-hover clickable">
-                        <thead>
-                        <tr>
-                            <th>Title</th>
-                            <th>Description</th>
-                        </tr>
-                        </thead>
                         <tbody>
                         <tr ng-repeat="biobox in main.bioboxes" ng-click="main.selectBiobox(biobox)">
                             {% raw %}
                             <td ng-show="biobox.title"><b>{{ biobox.title }}</b></td>
-                            <td ng-show="biobox.description">{{ biobox.description }}</td>
                             {% endraw %}
                         </tr>
                         </tbody>
@@ -54,101 +47,109 @@
                 <button type="submit" class="btn btn-default">update</button>
             </form>
         </div>
-        <div class="col-xs-6">
+        <div class="col-xs-9">
             <div ng_hide="main.biobox || main.biobox == 'fail'">
                 <h2>Hello there!</h2>
                 <p>Please select a Biobox from the left table. Can't see any? Hit the update button!</p>
             </div>
             <div ng-hide="!main.biobox || main.biobox == 'fail'">
                 {% raw %}
-                <div id="bioboxes-{{ main.biobox.title }}">
-                    <h3> {{ main.biobox.image.dockerhub }} </h3>
-                    <p> {{ main.biobox.description }}</p>
-                    <table class="table">
-                        <tbody>
-                        <tr>
-                            <td>
-                                <span aria-hidden="true" class="glyphicon glyphicon-envelope"></span>
-                            </td>
-                            <td>
-                                <a ng-href="https://registry.hub.docker.com/u/{{ main.biobox.image.dockerhub }}">
-                                    Docker Image
-                                </a>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>
-                                <span class="glyphicon glyphicon-file"></span>
-                            </td>
-                            <td>
-                                <a ng-href="https://www.ncbi.nlm.nih.gov/pubmed/{{ main.biobox.pmid }}">
-                                    Pubmed Entry
-                                </a>
-                            </td>
-                        </tr>
-                        <tr ng-hide="!main.biobox.homepage">
-                            <td>
-                                <span class="glyphicon glyphicon-ok biobox-item-good"></span>
-                            </td>
-                            <td>
-                                <a ng-href="{{ main.biobox.homepage }}">
-                                    Homepage
-                                </a>
-                            </td>
-                        </tr>
-                        <tr ng-hide="main.biobox.homepage">
-                            <td>
-                                <span class="glyphicon glyphicon-remove biobox-item-bad"></span>
-                            </td>
-                            <td> No homepage available</td>
-                        </tr>
-                        <tr ng-hide="!main.biobox.image.source">
-                            <td>
-                                <span class="glyphicon glyphicon-ok biobox-item-good"></span>
-                            </td>
-                            <td>
-                                <a ng-href="{{ main.biobox.image.source }}">
-                                    Source Code Repository
-                                </a>
-                            </td>
-                        </tr>
-                        <tr ng-hide="main.biobox.image.source">
-                            <td>
-                                <span class="glyphicon glyphicon-remove biobox-item-bad"></span>
-                            </td>
-                            <td> No source code repository available</td>
-                        </tr>
-                        <tr ng-hide="!main.biobox.mailing_list">
-                            <td>
-                                <span class="glyphicon glyphicon-ok biobox-item-good"></span>
-                            </td>
-                            <td>
-                                <a ng-href="{{ main.biobox.mailing_list }}">
-                                    Mailing List
-                                </a>
-                            </td>
-                        </tr>
-                        <tr ng-hide="main.biobox.mailing_list">
-                            <td>
-                                <span class="glyphicon glyphicon-remove biobox-item-bad"></span>
-                            </td>
-                            <td> No mailing list available</td>
-                        </tr>
-                        </tbody>
-                    </table>
-                    <h4>Tasks</h4>
-                    <table class="table table-striped">
-                        <tbody>
-                        <tr ng-repeat="task in main.biobox.tasks">
-                            <td>
-                                <b>{{ task.name }}</b>
-                            </td>
-                            <td>
-                                {{ task.interface }}
-                            </td>
-                        </tr>
-                        </tbody>
-                    </table>
+                <div class="row">
+                    <div class="col-xs-8">
+                        <div id="bioboxes-{{ main.biobox.title }}">
+                            <h3> {{ main.biobox.image.dockerhub }} </h3>
+                            <p> {{ main.biobox.description }}</p>
+                            <h4>Tasks</h4>
+                            <table class="table table-striped">
+                                <tbody>
+                                <tr ng-repeat="task in main.biobox.tasks">
+                                    <td>
+                                        <b>{{ task.name }}</b>
+                                    </td>
+                                    <td>
+                                        {{ task.interface.name }}
+                                    </td>
+                                </tr>
+                                </tbody>
+                            </table>
+                        </div>
+
+                    </div>
+                    <div class="col-xs-4">
+                        <table class="table">
+                            <tbody>
+                            <tr>
+                                <td>
+                                    <span aria-hidden="true" class="glyphicon glyphicon-envelope"></span>
+                                </td>
+                                <td>
+                                    <a ng-href="https://registry.hub.docker.com/u/{{ main.biobox.image.dockerhub }}">
+                                        Docker Image
+                                    </a>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>
+                                    <span class="glyphicon glyphicon-file"></span>
+                                </td>
+                                <td>
+                                    <a ng-href="https://www.ncbi.nlm.nih.gov/pubmed/{{ main.biobox.pmid }}">
+                                        Pubmed Entry
+                                    </a>
+                                </td>
+                            </tr>
+                            <tr ng-hide="!main.biobox.homepage">
+                                <td>
+                                    <span class="glyphicon glyphicon-ok biobox-item-good"></span>
+                                </td>
+                                <td>
+                                    <a ng-href="{{ main.biobox.homepage }}">
+                                        Homepage
+                                    </a>
+                                </td>
+                            </tr>
+                            <tr ng-hide="main.biobox.homepage">
+                                <td>
+                                    <span class="glyphicon glyphicon-remove biobox-item-bad"></span>
+                                </td>
+                                <td> No homepage available</td>
+                            </tr>
+                            <tr ng-hide="!main.biobox.image.source">
+                                <td>
+                                    <span class="glyphicon glyphicon-ok biobox-item-good"></span>
+                                </td>
+                                <td>
+                                    <a ng-href="{{ main.biobox.image.source }}">
+                                        Source Code Repository
+                                    </a>
+                                </td>
+                            </tr>
+                            <tr ng-hide="main.biobox.image.source">
+                                <td>
+                                    <span class="glyphicon glyphicon-remove biobox-item-bad"></span>
+                                </td>
+                                <td> No source code repository available</td>
+                            </tr>
+                            <tr ng-hide="!main.biobox.mailing_list">
+                                <td>
+                                    <span class="glyphicon glyphicon-ok biobox-item-good"></span>
+                                </td>
+                                <td>
+                                    <a ng-href="{{ main.biobox.mailing_list }}">
+                                        Mailing List
+                                    </a>
+                                </td>
+                            </tr>
+                            <tr ng-hide="main.biobox.mailing_list">
+                                <td>
+                                    <span class="glyphicon glyphicon-remove biobox-item-bad"></span>
+                                </td>
+                                <td> No mailing list available</td>
+                            </tr>
+                            </tbody>
+                        </table>
+
+                    </div>
                 </div>
                 {% endraw %}
             </div>
