--- a/bioboxgui/static/partials/biobox-list.html
+++ b/bioboxgui/static/partials/biobox-list.html
@@ -1,4 +1,4 @@
-<div class="row" ng-controller="BioboxController as main">
+<div class="row">
     <div class="col-xs-3">
         <h2>Interfaces</h2>
         <select ng-init="selectedInterface = main.getInterface(null)" ng-model="selectedInterface"
