--- a/bioboxgui/static/partials/navigation.html
+++ b/bioboxgui/static/partials/navigation.html
@@ -12,6 +12,9 @@
             <li ng-repeat="route in routes" ng-class="{active: activeRoute(route)}">
                 <a href="#{{ route.path }}">{{ route.name }}</a>
             </li>
+            <li ng-class="{active: activeRoute({path: '/login', name: 'Login'})}">
+                <a href="#/bioboxgui/login">Login</a>
+            </li>
         </ul>
     </div>
 </nav>
