--- a/bioboxgui/static/partials/biobox-list.html
+++ b/bioboxgui/static/partials/biobox-list.html
@@ -37,9 +37,9 @@
                         <h3> {{ main.biobox.image.dockerhub }} </h3>
                         <p> {{ main.biobox.description }}</p>
                         <h4>Tasks</h4>
-                        <table class="table table-striped">
+                        <table class="table table-striped table-hover clickable">
                             <tbody>
-                            <tr ng-repeat="task in main.biobox.tasks">
+                            <tr ng-repeat="task in main.biobox.tasks" ng-click="main.selectTask(task)">
                                 <td>
                                     <b>{{ task.name }}</b>
                                 </td>
@@ -49,6 +49,21 @@
                             </tr>
                             </tbody>
                         </table>
+
+                        <form name="taskSubmitForm" ng-submit="main.submitTask()" role="form" ng-hide="!main.task">
+                            <h4>{{ main.task.name }}</h4>
+                            <div class="form-group"
+                                 ng-class="{ 'has-error': form.file.$dirty && form.file.$error.required }">
+                                <label for="file">fastq file</label>
+                                <input type="text" name="fastq file" id="file" class="form-control"
+                                       ng-model="main.task.file"
+                                       required/>
+                            </div>
+                            <div class="form-actions">
+                                <button type="submit" ng-disabled="form.$invalid" class="btn btn-primary">Submit Task
+                                </button>
+                            </div>
+                        </form>
                     </div>
 
                 </div>
