--- a/bioboxgui/static/partials/biobox-list.html
+++ b/bioboxgui/static/partials/biobox-list.html
@@ -21,6 +21,10 @@
                 </table>
             </div>
         </div>
+        <form role="form" ng-submit="main.addSource(source)" ng-init="source = {'url':'', 'name':''}" ng-model="source">
+            <input type="text" ng-model="source.url" id="url">
+            <button type="submit" class="btn btn-default">add source</button>
+        </form>
         <form role="form" ng-submit="main.updateBioboxes()">
             <button type="submit" class="btn btn-default">update</button>
         </form>
