--- a/bioboxgui/static/angular/components/bioboxes/directives/biobox-meta.html
+++ b/bioboxgui/static/angular/components/bioboxes/directives/biobox-meta.html
@@ -1,5 +1,5 @@
-<div ng-hide="main.biobox == 404">
-    <table class="table">
+<div>
+    <table ng-hide="main.biobox == 404" class="table">
         <tbody>
         <tr>
             <td>
