--- a/bioboxgui/static/angular/components/states/states.html
+++ b/bioboxgui/static/angular/components/states/states.html
@@ -1,6 +1,7 @@
-<div ng-init="main.queryStates()" ng-model="main.states">
+<div>
     <h1>Tasks</h1>
-    <table class="table table-striped table-hover">
+    <button class="btn btn-primary pull-right" ng-click="main.queryStates()">update</button>
+    <table class="table table-striped table-hover" ng-hide="main.states.length < 1">
         <thead>
         <tr>
             <td>ID</td>
@@ -35,4 +36,8 @@
             </td>
         </tr>
     </table>
+    <div ng-show="main.states.length < 1">
+        <h3>No states to show</h3>
+        <p>Try hitting the update button or submit a task</p>
+    </div>
 </div>
