--- a/bioboxgui/static/angular/components/administration/administration.html
+++ b/bioboxgui/static/angular/components/administration/administration.html
@@ -40,6 +40,7 @@
                             id="grantUsername"
                             class="form-control"
                             required/>
+                    <input type="button" class="btn btn-default" ng-click="main.getUser(grantUsername)" value="get user"></input>
                 </div>
                 <div class="form-group">
                     <label for="userRoles">Roles</label>
@@ -59,6 +60,25 @@
                 </div>
             </form>
         </div>
+    </div>
+    <div class="row col-md-12">
+        <h2>Users</h2>
+
+        <button ng-if="main.users.length < 1" class="btn btn-default pull-right" ng-click="main.getUsers()">get users</button>
+        <table class='table table-striped table-hover' ng-hide="main.users.length < 1">
+            <thead>
+                <tr>
+                    <td>Username</td>
+                    <td>E-Mail Address</td>
+                    <td>Roles</td>
+                </tr>
+            </thead>
+            <tr ng-repeat="user in main.users">
+                <td>{{ user.username }}</td>
+                <td>{{ user.email }}</td>
+                <td><p ng-repeat="role in user.roles">{{ role.name }}</p></td>
+            </tr>
+        </table>
     </div>
     <div class="row">
         <div class="col-md-6">
