--- a/bioboxgui/static/angular/components/bioboxes/directives/biobox.html
+++ b/bioboxgui/static/angular/components/bioboxes/directives/biobox.html
@@ -34,6 +34,18 @@
                             >
                     </div>
                 </div>
+                <div class="form-group" ng-if="hasRole([main.Roles.trusted, main.Roles.admin])">
+                    <label for="cores">Cores</label>
+                    <input class="form-control" type="number" name="cores" id="cores" ng-model="main.config.cores" min="0" validate/>
+                </div>
+                <div class="form-group" ng-if="hasRole([main.Roles.trusted, main.Roles.admin])">
+                    <label for="memory">Memory</label>
+                    <input class="form-control" type="number" name="memory" id="memory" ng-model="main.config.memory" min="0" validate/>
+                </div>
+                <div class="form-group" ng-if="hasRole([main.Roles.trusted, main.Roles.admin])">
+                    <label for="cputime">Cputime</label>
+                    <input class="form-control" type="number" name="cputime" id="cputime" ng-model="main.config.cputime" min="0" validate/>
+                </div>
                 <div class="form-actions">
                     <button type="submit" ng-disabled="form.$invalid" class="btn btn-primary">Submit Task
                     </button>
