--- a/bioboxgui/static/angular/components/states/states.html
+++ b/bioboxgui/static/angular/components/states/states.html
@@ -1,7 +1,7 @@
 <div>
     <h1>Tasks</h1>
     <button class="btn btn-primary pull-right" ng-click="main.queryStates()">update</button>
-    <table class="table table-striped table-hover" ng-hide="main.states.length < 1">
+    <table class="table table-striped table-hover" ng-hide="!main.states.length">
         <thead>
         <tr>
             <td>ID</td>
@@ -11,7 +11,7 @@
             <td></td>
         </tr>
         </thead>
-        <tr ng-repeat="state in main.states">
+        <tr ng-repeat="state in main.states.reverse()">
             <td><b>{{ state.id }}</b></td>
             <td>{{ state.code }}</td>
             <td>{{ state.box }}:{{ state.cmd }}</td>
@@ -36,7 +36,7 @@
             </td>
         </tr>
     </table>
-    <div ng-show="main.states.length < 1">
+    <div ng-if="!main.states.length">
         <h3>No states to show</h3>
         <p>Try hitting the update button or submit a task</p>
     </div>
